[gd_scene format=3 uid="uid://t81jd6joigqr"]

[ext_resource type="Script" uid="uid://c3nmdkiwphxe1" path="res://ui/main.gd" id="1_fblgx"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8blns"]
content_margin_left = 5.0
content_margin_top = 5.0
content_margin_right = 5.0
content_margin_bottom = 5.0
bg_color = Color(0.078431375, 0.078431375, 0.078431375, 1)

[node name="Main" type="PanelContainer" unique_id=1719327535]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_8blns")
script = ExtResource("1_fblgx")

[node name="VBoxContainer" type="VBoxContainer" parent="." unique_id=863805007]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer" unique_id=1620717272]
layout_mode = 2

[node name="Toolbar" type="HBoxContainer" parent="VBoxContainer/PanelContainer" unique_id=1912392673]
layout_mode = 2

[node name="PathButton" type="Button" parent="VBoxContainer/PanelContainer/Toolbar" unique_id=2130828111]
layout_mode = 2
text = "..."

[node name="PanelContainer2" type="PanelContainer" parent="VBoxContainer" unique_id=1683110704]
layout_mode = 2
size_flags_vertical = 3

[node name="FolderDialog" type="FileDialog" parent="." unique_id=1589698455]
oversampling_override = 1.0
title = "Select Library Folder"
initial_position = 1
size = Vector2i(1000, 500)
file_mode = 2
access = 2
show_hidden_files = true
use_native_dialog = true
folder_creation_enabled = false
deleting_enabled = false

[connection signal="pressed" from="VBoxContainer/PanelContainer/Toolbar/PathButton" to="." method="_on_path_button_pressed"]
[connection signal="dir_selected" from="FolderDialog" to="." method="_on_folder_dialog_dir_selected"]
